--- a/.gitignore
+++ b/.gitignore
@@ -49,4 +49,33 @@ instance/
 .Spotlight-V100
 .Trashes
 ehthumbs.db
-Thumbs.db 
+Thumbs.db
+
+# Python cache files
+__pycache__/
+*.py[cod]
+*$py.class
+.pytest_cache/
+.coverage
+htmlcov/
+
+# Database files
+*.db
+*.sqlite
+*.sqlite3
+
+# Logs
+logs/
+*.log
+
+# Temporary files
+temp/
+tmp/
+
+# Static files generated during development
+app/static/uploads/
+
+# Docker
+Dockerfile
+docker-compose.yml
+docker-compose.override.yml 
