--- a/amvera.yml
+++ b/amvera.yml
@@ -4,11 +4,11 @@ meta:
     name: docker
 
 build:
-  dockerfile: /workspace/Dockerfile
-  args:
-    - "--dockerfile=/workspace/Dockerfile"
+  context: .
+  dockerfile: Dockerfile
   skip: false
 
 run:
-  persistenceMount: /data
-  containerPort: 8080 
+  command: gunicorn -c gunicorn_config.py app:app  
+  containerPort: 8080
+  persistenceMount: /data 
