Создание минимальной конфигурации amvera.yml с использованием готового образа

--- a/amvera.yml
+++ b/amvera.yml
@@ -4,8 +4,9 @@ meta:
     name: docker
 
 build:
-  dockerfile: ./Dockerfile
+  skip: yes
 
 run:
+  image: flaskes/sajt-na-flaske2:latest
   containerPort: 8080
   persistenceMount: /data 
