Создание минимальной конфигурации amvera.yml с использованием готового образа

--- a/amvera.yml
+++ b/amvera.yml
@@ -1,8 +1,6 @@
 meta:
-  environment: python
-  toolchain:
-    name: pip
-    version: '3.11'
+  environment: docker
+  image: python:3.11-slim
 
 build:
   env:
@@ -12,5 +10,5 @@ build:
     DATABASE_URL: sqlite:///data/app.db
 
 run:
-  command: gunicorn app:app -b 0.0.0.0:$PORT -w 4
+  command: python -m gunicorn app:app -b 0.0.0.0:$PORT -w 4
   persistenceMount: /data 
