--- a/amvera.yml
+++ b/amvera.yml
@@ -5,5 +5,5 @@ meta:
     version: '3.11'
 
 run:
-  command: python -c "import os, time; from flask import Flask; app = Flask(__name__); @app.route('/'); def index(): return {'status': 'ok', 'message': 'Тестовое приложение Flask на Amvera'}; port = int(os.environ.get('PORT', 5000)); print(f'Запуск на порту {port}'); import threading; threading.Thread(target=lambda: app.run(host='0.0.0.0', port=port, debug=False, use_reloader=False)).start(); while True: print('Приложение работает...'); time.sleep(60)"
+  command: python -c "import os, time; from flask import Flask, jsonify; app = Flask(__name__); @app.route('/') def index(): return jsonify({'status': 'ok', 'message': 'Тестовое приложение Flask на Amvera'}); port = int(os.environ.get('PORT', 5000)); print(f'Запуск на порту {port}'); import threading; threading.Thread(target=lambda: app.run(host='0.0.0.0', port=port, debug=False, use_reloader=False)).start(); while True: print('Приложение работает...'); time.sleep(60)"
   persistenceMount: /data 
