Инициализация проекта с обновленным дизайном интерфейса

--- a/.env
+++ b/.env
@@ -1,7 +1,22 @@
-# Переменные окружения для Flask-приложения
-FLASK_APP=app.py
-FLASK_ENV=production
-SECRET_KEY=your_production_secret_key_change_this
-DATABASE_URL=sqlite:////data/app.db
-CACHE_TYPE=SimpleCache
-DEBUG=False 
+# Переменные окружения для Flask приложения
+# НЕ используйте этот файл в production!
+
+# Основные настройки
+FLASK_APP=run.py
+FLASK_ENV=development
+FLASK_DEBUG=1
+SECRET_KEY=dev-only-insecure-key-do-not-use-in-production
+
+# Настройки базы данных
+# SQLite для локальной разработки
+DATABASE_URL=sqlite:///app.db
+
+# Опции логирования
+LOG_TO_STDOUT=1
+
+# Настройки почты (при необходимости)
+# MAIL_SERVER=smtp.example.com
+# MAIL_PORT=587
+# MAIL_USE_TLS=1
+# MAIL_USERNAME=username
+# MAIL_PASSWORD=password 
